--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -3,7 +3,7 @@
 	  event name: <%= f.text_field :name %><br/>
 	  event photo: <%= f.text_field :event_photo %><br/>
 	  description: <%= f.text_area :description %><br/>
-	  event time: <%= f.date_select :event_time %><br/>
+	  event time: <%= f.datetime_select :event_time %><br/>
 	  age limit: <%= f.number_field :age_limit %><br/>
 	  link: <%= f.text_area :link %><br/>
 	  <%= f.submit %>
