--- a/app/views/events/_stream.html.erb
+++ b/app/views/events/_stream.html.erb
@@ -1,20 +1,17 @@
-<div id="stream">
-	<% @events.each do |x| %>
-		<div class="event"> 
-		  <div>
-		  	<%= link_to user_path(x.user) do %> 
-		      <img src="<%= x.user.profile_photo %>" />
-		    <% end %>
+<div class="stream">
+	<% @events.each do |event| %>		
+		<div class="event" style="background-image: url('<%= event.event_photo %>')"> 
+		  <%= link_to user_path(event.user_id) do %>
+		  <div class="event-user-pic">
+		    <img src="<%= event.user.profile_photo %>" />
 		  </div>
-		  <div>
-		    <h4><%= x.name %></h4>
-		    <h2><%= x.event_time %></h2>
-		  </div>
-		  <div>
-		  	<%= link_to event_path(x.id) do %> 
-		      <img src="<%= x.event_photo %>" />
-		    <% end %>
-		  </div>
-		</div>
+		  <% end %>
+      <%= link_to user_event_path(event.user_id, event.id) do %>
+      <div class="event-name-time">
+    		<h2><%= event.name %></h2>
+    		<h4><%= event.event_time.to_date().strftime("%m/%d") %></h4>
+  		</div>
+  		<% end %>
+  	</div>
 	<% end %>
 </div>
