--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,62 +8,73 @@
 </head>
 
 <body>
-	
-<% if current_user %>
-<!-- nav bar -->
-<div class="nav-bar">
-	<nav class="top-bar" data-topbar role="navigation">
-	  
-	  <ul class="title-area">
-	    <li class="name">
-	      <h1><a href="/">MOVE</a></h1>
-	    </li>
-	     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-	    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-	  </ul>
+<div class="wrapper">
+	<% if current_user %>
+	<!-- nav bar -->
+	<div class="nav-bar">
+		<nav class="top-bar" data-topbar role="navigation">
+		  
+		  <ul class="title-area">
+		    <li id="logo">
+		      <img src="http://i.imgur.com/W2XwRkP.png">
+		    </li>
+		     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+		  </ul>
 
-	  <section class="top-bar-section">
-	    <!-- Right Nav Section -->
-	    <ul class="left">
-	    	<li><%= render 'users/search' %></li>
-	    </ul>
-	  </section>
+		  <section class="top-bar-section">
+		    <!-- Right Nav Section -->
+		    <div class="search-box">
+			    <ul class="left">
+			    	<li><%= render 'users/search' %></li>
+			    </ul>
+			  </div>
+		  </section>
 
 
-	  <section class="top-bar-section">
-	    <!-- Right Nav Section -->
-	    <ul class="right">
-	    	<li><a href="/events/new">+</a></li>
-	    	<li><a href="/">Stream</a></li>
-	      <li><a href="/users/<%= current_user.id %>">Profile</a></li>
-	      <li class="has-dropdown">
-	        <a href="#">Settings</a>
-	        <ul class="dropdown">
-	          <li><a href="#">Account Settings</a></li>
-	          <li><%= link_to  'Logout', destroy_user_session_path, method: 'delete' %></a></li>
-	        </ul>
-	      </li>
-	    </ul>
-	  </section>
-	  
-	</nav>
+		  <section class="top-bar-section">
+		    <!-- Right Nav Section -->
+		    <ul class="right">
+		    	<li><a href="/users/<%= current_user.id %>/events/new">+</a></li>
+		    	<li><a href="/">Stream</a></li>
+		      <li><div class="user-thumbnail">
+		      	<a href="/users/<%= current_user.id %>">
+			      	<div class="username-jont">
+			      		<p><%= current_user.username%></p>
+			      	</div>
+			      	<div class="profile-pic-thumbnail">
+			      		<img src="<%= current_user.profile_photo%>">
+			      	</div>
+		      	</a>
+		      </div></li>
+		      <li class="has-dropdown">
+		        <a href="#">Settings</a>
+		        <ul class="dropdown">
+		          <li><%= link_to  'Account Settings', edit_user_registration_path, method: 'get' %>></li>
+		          <li><%= link_to  'Logout', destroy_user_session_path, method: 'delete' %></li>
+		        </ul>
+		      </li>
+		    </ul>
+		  </section>
+		  
+		</nav>
+	</div>
+
+	<% end %>
+
+	<!-- main content -->
+	<div class="content">
+
+	<!-- user profile -->
+
+	<!-- stream -->
+		<%= yield %>
+
+	</div>
+	<div class="push"></div>
 </div>
-
-<% end %>
-
-<!-- main content -->
-<div class="content">
-
-<!-- user profile -->
-
-<!-- stream -->
-	<%= yield %>
-
-</div>
-	
 <!-- footer -->
 <footer>
-	<p>Copyright MOVE</p>
+	<p>Copyright MOVE, LLC</p>
 </footer>
 
 
