--- a/app/views/events/_stream.html.erb
+++ b/app/views/events/_stream.html.erb
@@ -1,14 +1,16 @@
 <div class="stream">
 	<% @events.each do |event| %>		
-		<div class="event" style="background-image: url('<%= event.event_photo %>')"> 
+		<div class="event" style="background-image: url('<%= event.event_photo %>'); background-size: 235px 235px"> 
 		  <%= link_to user_path(event.user_id) do %>
-		  <div class="event-user-pic">
-		    <img src="<%= event.user.profile_photo %>" />
+		  <div class="event-username">
+		    <h6><%= event.user.username %></h6>
 		  </div>
 		  <% end %>
       <%= link_to user_event_path(event.user_id, event.id) do %>
-      <div class="event-name-time">
+      <div class="event-name">
     		<h2><%= event.name %></h2>
+    	</div>
+    	<div class="event-time">
     		<h4><%= event.event_time.to_date().strftime("%m/%d") %></h4>
   		</div>
   		<% end %>
