--- a/app/views/users/_user_stream.html.erb
+++ b/app/views/users/_user_stream.html.erb
@@ -1,15 +1,17 @@
 <div class="stream">
 	<div class="my-events">
 	<% @events.each do |event| %>		
-		<div class="event" style="background-image: url('<%= event.event_photo %>')"> 
+		<div class="event" style="background-image: url('<%= event.event_photo %>'); background-size: 235px 235px"> 
 		  <%= link_to user_path(event.user_id) do %>
-		  <div class="event-user-pic">
-		    <img src="<%= event.user.profile_photo %>" />
+		  <div class="event-username">
+		    <h6><%= event.user.username %></h6>
 		  </div>
 		  <% end %>
       <%= link_to user_event_path(event.user_id, event.id) do %>
-      <div class="event-name-time">
+      <div class="event-name">
     		<h2><%= event.name %></h2>
+    	</div>
+    	<div class="event-time">
     		<h4><%= event.event_time.to_date().strftime("%m/%d") %></h4>
   		</div>
   		<% end %>
@@ -21,15 +23,17 @@
 	
 	<% @rsvps.each do |rsvp| %>
 		<% if rsvp.event %>
-		<div class="event" style="background-image: url('<%= rsvp.event.event_photo %>')"> 
+		<div class="event" style="background-image: url('<%= rsvp.event.event_photo %>'); background-size: 235px 235px"> 
 		  <%= link_to user_path(rsvp.event.user_id) do %>
-		  <div class="event-user-pic">
-		    <img src="<%= rsvp.event.user.profile_photo %>" />
+		  <div class="event-username">
+		    <h6><%= rsvp.event.user.username %></h6>
 		  </div>
 		  <% end %>
       <%= link_to user_event_path(rsvp.user_id, rsvp.event.id) do %>
-      <div class="event-name-time">
+      <div class="event-name">
     		<h2><%= rsvp.event.name %></h2>
+    	</div>
+    	<div class="event-time">
     		<h4><%= rsvp.event.event_time.to_date().strftime("%m/%d") %></h4>
   		</div>
   		<% end %>
